--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" rel="stylesheet">
     <title>Charlotte Events App</title>
   </head>
   <body>
     <div id="charlotte-events-app"></div>
-    <script src="/dist/charlotte-events-app.js"></script>
+    <script src="./vue-app/dist/charlotte-events-app.js"></script>
   </body>
 </html>
