add public directory

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="charlotte-events-app"></div>
-    <script src="./vue-app/dist/charlotte-events-app.js"></script>
+    <script src="../vue-app/dist/charlotte-events-app.js"></script>
   </body>
 </html>
