removed todos just because, changed theme color re-org'd some comps, changed the color theme

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico">
     <meta name="msapplication-TileColor" content="#303030">
     <meta name="msapplication-config" content="./img/browserconfig.xml">
-    <meta name="theme-color" content="#303030">
+    <meta name="theme-color" content="#448aff">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" rel="stylesheet">
     <title>Charlotte Events App</title>
