begin to implement 2.0 mockups

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="manifest" href="./img/site.webmanifest">
-    <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#303030">
+    <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#4a90e2">
     <link rel="shortcut icon" href="./img/favicon.ico">
     <meta name="msapplication-TileColor" content="#303030">
     <meta name="msapplication-config" content="./img/browserconfig.xml">
-    <meta name="theme-color" content="#448aff">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" rel="stylesheet">
-    <title>Charlotte Events App</title>
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <title>Happening This Week · Charlotte Events App</title>
   </head>
   <body>
     <div id="charlotte-events-app"></div>
