--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Material+Icons" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" rel="stylesheet">
-    <title>Charlotte Events App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happening This Week · Charlotte Events App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css">
+    <link rel="stylesheet" href="./public/fonts/fonts.css">
   </head>
   <body>
     <div id="charlotte-events-app"></div>
