updated include file names

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
   </head>
   <body>
     <div id="charlotte-events-app"></div>
+    <script src="./js/0.charlotte-events-app.js"></script>
+    <script src="./js/1.charlotte-events-app.js"></script>
     <script src="./js/charlotte-events-app.js"></script>
   </body>
 </html>
