--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-    <link rel="manifest" href="./img/site.webmanifest">
-    <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#4a90e2">
-    <link rel="shortcut icon" href="./img/favicon.ico">
-    <meta name="msapplication-TileColor" content="#303030">
-    <meta name="msapplication-config" content="./img/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png?v=69Pl4oe3R5">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png?v=69Pl4oe3R5">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png?v=69Pl4oe3R5">
+    <link rel="manifest" href="./img/site.webmanifest?v=69Pl4oe3R5">
+    <link rel="mask-icon" href="./img/safari-pinned-tab.svg?v=69Pl4oe3R5" color="#4a90e2">
+    <link rel="shortcut icon" href="./img/favicon.ico?v=69Pl4oe3R5">
+    <meta name="msapplication-TileColor" content="#4a90e2">
+    <meta name="msapplication-config" content="./img/browserconfig.xml?v=69Pl4oe3R5">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css">
     <link rel="stylesheet" href="./fonts/fonts.css">
